<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:theme="@style/AboutTheme"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_layout" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/version_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="?android:textColorSecondary"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:background="@drawable/white_button_background"
        android:id="@+id/blog_btn"
        android:textColor="@color/grey"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/jianshu_blog"
        android:textSize="@dimen/abc_text_size_button_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:background="@drawable/white_button_background"
        android:id="@+id/project_home_btn"
        android:textColor="@color/grey"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/project_home"
        android:textSize="@dimen/abc_text_size_button_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>